--- a/src/app/components/person-list/person-list.component.html
+++ b/src/app/components/person-list/person-list.component.html
@@ -1,73 +1,68 @@
-<div>
-    <h2>People</h2>
-    <table *ngIf="people.length > 0; else noPeople">
-      <thead>
+<div class="container mt-4">
+  <h2>People</h2>
+  <table *ngIf="people.length > 0; else noPeople" class="table table-bordered table-hover">
+    <thead class="thead-light">
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Current Rank</th>
+        <th>Current Duty Title</th>
+        <th>Career Start Date</th>
+        <th>Career End Date</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngIf="addingPerson">
+        <td>#</td>
+        <td><input [(ngModel)]="newPerson.name" class="form-control" placeholder="Enter name"></td>
+        <td><input [(ngModel)]="newPerson.currentRank" class="form-control" placeholder="Enter rank"></td>
+        <td><input [(ngModel)]="newPerson.currentDutyTitle" class="form-control" placeholder="Enter duty title"></td>
+        <td><input [(ngModel)]="newPerson.careerStartDate" class="form-control" type="date"></td>
+        <td><input [(ngModel)]="newPerson.careerEndDate" class="form-control" type="date"></td>
+        <td>
+          <button class="btn btn-success btn-sm" (click)="saveNewPerson()">✔️</button>
+          <button class="btn btn-danger btn-sm" (click)="cancelAddPerson()">❌</button>
+        </td>
+      </tr>
+      <tr *ngFor="let person of people" (click)="selectPerson(person)" [class.table-active]="person === selectedPerson">
+        <td>{{ person.personId }}</td>
+        <td *ngIf="!editing[person.personId]">{{ person.name }}</td>
+        <td *ngIf="editing[person.personId]"><input [(ngModel)]="person.name" class="form-control"></td>
+        <td>{{ person.currentRank }}</td>
+        <td>{{ person.currentDutyTitle }}</td>
+        <td>{{ person.careerStartDate | date }}</td>
+        <td>{{ person.careerEndDate | date }}</td>
+        <td>
+          <button *ngIf="!editing[person.personId]" class="btn btn-warning btn-sm" (click)="startEdit(person.personId, $event)">Edit</button>
+          <button *ngIf="editing[person.personId]" class="btn btn-success btn-sm" (click)="saveEdit(person, $event)">Save</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <ng-template #noPeople>
+    <p>No people available.</p>
+  </ng-template>
+
+  <div *ngIf="selectedPerson" class="mt-4">
+    <h3>Astronaut Details for {{ selectedPerson.name }}</h3>
+    <table class="table table-bordered table-hover">
+      <thead class="thead-light">
         <tr>
-          <th>ID</th>
-          <th>Name</th>
-          <th>Current Rank</th>
           <th>Current Duty Title</th>
+          <th>Current Rank</th>
           <th>Career Start Date</th>
-          <th>Career End Date</th>
-          <th>Select</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let person of people">
-          <td>{{ person.personId }}</td>
-          <td>{{ person.name }}</td>
-          <td>{{ person.currentRank }}</td>
-          <td>{{ person.currentDutyTitle }}</td>
-          <td>{{ person.careerStartDate | date }}</td>
-          <td>{{ person.careerEndDate | date }}</td>
-          <td><button (click)="selectPerson(person)">Select</button></td>
+        <tr>
+          <td>{{ astronautDetail?.currentDutyTitle }}</td>
+          <td>{{ astronautDetail?.currentRank }}</td>
+          <td>{{ astronautDetail?.careerStartDate | date }}</td>
         </tr>
       </tbody>
     </table>
-    <ng-template #noPeople>
-      <p>No people available.</p>
-    </ng-template>
-  
-    <div *ngIf="selectedPerson">
-      <h3>Person Detail</h3>
-      <p>ID: {{ selectedPerson.personId }}</p>
-      <p>Name: {{ selectedPerson.name }}</p>
-      <p>Current Rank: {{ selectedPerson.currentRank }}</p>
-      <p>Current Duty Title: {{ selectedPerson.currentDutyTitle }}</p>
-      <p>Career Start Date: {{ selectedPerson.careerStartDate | date }}</p>
-      <p>Career End Date: {{ selectedPerson.careerEndDate | date }}</p>
-    </div>
-  
-    <div *ngIf="astronautDetail">
-      <h3>Astronaut Detail</h3>
-      <p>Current Duty Title: {{ astronautDetail.currentDutyTitle }}</p>
-      <p>Current Rank: {{ astronautDetail.currentRank }}</p>
-      <p>Career Start Date: {{ astronautDetail.careerStartDate | date }}</p>
-    </div>
-  
-    <div *ngIf="astronautDuties && astronautDuties.length > 0">
-      <h3>Astronaut Duties</h3>
-      <table>
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Rank</th>
-            <th>Duty Title</th>
-            <th>Duty Start Date</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let duty of astronautDuties">
-            <td>{{ duty.name }}</td>
-            <td>{{ duty.rank }}</td>
-            <td>{{ duty.dutyTitle }}</td>
-            <td>{{ duty.dutyStartDate | date }}</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div *ngIf="astronautDuties && astronautDuties.length === 0">
-      <p>No duties assigned.</p>
-    </div>
   </div>
-  
+
+  <button class="fab" (click)="addPerson()">+</button>
+</div>
