--- a/src/app/components/person-list/person-list.component.html
+++ b/src/app/components/person-list/person-list.component.html
@@ -9,7 +9,11 @@
         <th>Current Duty Title</th>
         <th>Career Start Date</th>
         <th>Career End Date</th>
-        <th>Actions</th>
+        <th>
+          <button class="btn btn-primary btn-sm" (click)="addPerson()">
+            <i class="fas fa-plus"></i>
+          </button>
+        </th>
       </tr>
     </thead>
     <tbody>
@@ -63,6 +67,6 @@
       </tbody>
     </table>
   </div>
-
-  <button class="fab" (click)="addPerson()">+</button>
+  <!-- Show this button on small screens -->
+  <button class="fab d-md-none" (click)="addPerson()">+</button>
 </div>
