create nav with search and logo, improve width of table

--- a/src/app/components/person-list/person-list.component.html
+++ b/src/app/components/person-list/person-list.component.html
@@ -32,7 +32,7 @@
             <th>Current Duty Title</th>
             <th>Career Start Date</th>
             <th>Career End Date</th>
-            <th>
+            <th class="action-column">
               <button class="btn btn-primary btn-sm" (click)="addPerson()">
                 <i class="fas fa-plus"></i>
               </button>
@@ -47,7 +47,7 @@
             <td><input [(ngModel)]="newPerson.currentDutyTitle" class="form-control" placeholder="Enter duty title"></td>
             <td><input [(ngModel)]="newPerson.careerStartDate" class="form-control" type="date"></td>
             <td><input [(ngModel)]="newPerson.careerEndDate" class="form-control" type="date"></td>
-            <td>
+            <td class="action-column">
               <button class="btn btn-success btn-sm" (click)="saveNewPerson()">
                 <i class="fas fa-check"></i>
               </button>
@@ -64,7 +64,7 @@
             <td>{{ person.currentDutyTitle }}</td>
             <td>{{ person.careerStartDate | date }}</td>
             <td>{{ person.careerEndDate | date }}</td>
-            <td>
+            <td class="action-column">
               <button *ngIf="!editing[person.personId]" class="btn btn-warning btn-sm" (click)="startEdit(person.personId, $event)">
                 <i class="fas fa-pen"></i>
               </button>
