--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+/*#region PersonListRegion*/
 .container {
   margin-top: 20px;
 }
@@ -9,8 +10,8 @@
 }
 
 .profile-card-wrapper {
-  width: 288px;
-  height: 492px;
+  width: 320px;
+  height: 520px;
   position: relative;
   display: flex;
   border: 2px solid rgb(0, 0, 0);
@@ -42,7 +43,23 @@
 }
 
 .table-wrapper {
-  flex-grow: 1;
+  flex: 1 1 80%;
+  min-width: 0;
+}
+.table {
+  width: calc(100%+20%);
+  margin-right: -20%;
+}
+
+@media (max-width: 768px) {
+  .table-wrapper{
+    flex: 1 1 100%;
+  }
+
+  .table {
+    width: 100%;
+    margin-right: 0;
+  }
 }
 
 .fab {
@@ -71,3 +88,80 @@
   flex-direction: column;
   align-items: center;
 }
+
+.action-column {
+  width: 150px;
+  text-align: center;
+}
+
+.table .btn {
+  margin: 0 2px;
+}
+
+/*#endregion PersonListRegion*/
+
+/*#region NavbarRegion*/
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 12px;
+}
+
+.navbar-left {
+  display: flex;
+  align-items: center;
+  margin-left: 25%;
+}
+
+.navbar-center {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+  margin-left: -75%;
+}
+
+.navbar .navbar-brand {
+  margin: 0;
+  padding: 0;
+}
+
+.navbar .navbar-brand img {
+  width: 40px;
+  height: auto;
+}
+
+.navbar .form-control {
+  max-width: 300px;
+  margin-left: 20px;
+}
+
+.navbar .nav-link {
+  display: flex;
+  align-items: center;
+  padding: 8px 12px;
+}
+
+.navbar .nav-link i {
+  margin-right: 4px;
+}
+
+@media (max-width: 992px) {
+  .navbar-left {
+    margin-left: 0;
+  }
+
+  .navbar-center {
+    margin-left: 0;
+  }
+
+  .navbar-left form {
+    flex-grow: 1;
+  }
+
+  .navbar-left .form-control {
+    width: 100%;
+  }
+}
+
+/*#endregion NavbarRegion*/
