implement nested table for astronautDetail, WIP create / view details. implement pagination at 10 rows

--- a/src/app/components/astronaut-duty/astronaut-duty.component.html
+++ b/src/app/components/astronaut-duty/astronaut-duty.component.html
@@ -2,7 +2,7 @@
     <h2>Astronaut Duties</h2>
     <ul>
       <li *ngFor="let duty of duties">
-        {{ duty.name }} - {{ duty.rank }} - {{ duty.dutyTitle }} - {{ duty.dutyStartDate | date }}
+        {{ duty.id }} - {{ duty.rank }} - {{ duty.dutyTitle }} - {{ duty.dutyStartDate | date }}
       </li>
     </ul>
   </div>
